--- a/src/components/HeroStyles.css
+++ b/src/components/HeroStyles.css
@@ -4,10 +4,22 @@
     position: relative;
 }
 
+.hero-mid {
+    width: 100%;
+    height: 70vh;
+    position: relative;
+    
+}
+
+.hero-mid h1 {
+    padding: 4rem !important;
+}
+
 img {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    border-radius: 0 0px 20px 20px;
 }
 
 .hero-text {
@@ -36,6 +48,11 @@ img {
     padding: 0.7rem 2.5rem;
     border-radius: 50px;
     letter-spacing: 1px;
+}
+
+.hero-text .hide {
+    display: none;
+
 }
 
 @media screen and (max-width: 555px) {
