--- a/src/components/HeroStyles.css
+++ b/src/components/HeroStyles.css
@@ -6,7 +6,7 @@
 
 .hero-mid {
     width: 100%;
-    height: 70vh;
+    height: 75vh;
     position: relative;
     
 }
@@ -26,7 +26,7 @@ img {
     position: absolute;
     top: 50%;
     bottom: 20%;
-    left: 21%;
+    margin-left: 20.25%;
     transform: translate(-20%, -50%);
     width: 100%;
     text-align: center;
