--- a/src/components/HeroStyles.css
+++ b/src/components/HeroStyles.css
@@ -19,7 +19,7 @@ img {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    border-radius: 0 0px 20px 20px;
+    border-radius: 0 0 50px 50px;
 }
 
 .hero-text {
