--- a/src/components/FooterStyles.css
+++ b/src/components/FooterStyles.css
@@ -31,3 +31,16 @@
 .top i:hover {
     color: #f6bd60;
 }
+
+@media screen and (max-width: 850px) {
+    .footer {
+        padding: 1.5rem 2rem;
+    }
+    
+    .footer i {
+        margin: 1rem 1rem 0 0;;
+    }
+
+
+    
+}
